@@ -515,35 +515,44 @@ test coroutine-5.2 {right numLevels within coro} -constraints {testnrelevels} \
     rename relativeLevel {}
     unset res
 } -result {0 0 0 0}
-
 
-test coroutine-6.1 {coroutine nargs} \
--body {
+test coroutine-6.1 {coroutine nargs} -body {
     coroutine a ::apply $lambda
     a
 } -cleanup {
     rename a {}
 } -result 0
-
-test coroutine-6.2 {coroutine nargs} \
--body {
+test coroutine-6.2 {coroutine nargs} -body {
     coroutine a ::apply $lambda
     a a
 } -cleanup {
     rename a {}
 } -result 0
-
-test coroutine-6.3 {coroutine nargs} \
--body {
+test coroutine-6.3 {coroutine nargs} -body {
     coroutine a ::apply $lambda
     a a a
 } -cleanup {
     rename a {}
-} -returnCodes error
-
-unset lambda
-
+} -returnCodes error -result {wrong # args: should be "a ?arg?"}
+test coroutine-6.4 {unsupported: multi-argument yield} -body {
+    proc corobody {} {
+	set a 1
+	while 1 {
+	    set a [yield $a]
+	    set a [::tcl::unsupported::yieldm $a]
+	    lappend a [llength $a]
+	}
+    }
+    coroutine a corobody
+    coroutine b corobody
+    list [a x] [a y z] [a \{p] [a \{q r] [a] [a] [rename a {}] \
+	[b ok] [rename b {}] 
+} -cleanup {
+    rename corobody {}
+} -result {x {y z 2} \{p {\{q r 2} {} 0 {} ok {}}
+
 # cleanup
+unset lambda
 ::tcltest::cleanupTests
 
 return
